--- a/styles/style.scss
+++ b/styles/style.scss
@@ -371,38 +371,15 @@ input:-webkit-autofill {
   &.hrrd-subscribe-title {
     h1 {
       color: #fff;
-      span {
-        &::before {
-          border: 0.5px solid #fff;
-          background: #94bcf9;
-        }
-      }
     }
   }
   h1 {
     font-family: $circul-std-900;
     font-style: normal;
     font-size: 48px;
-    line-height: 58px;
+    // line-height: 58px;
     color: $hrrd-header-color;
-    display: inline-block;
-    span {
-      display: inline-block;
-      z-index: 1;
-      position: relative;
-      &::before {
-        position: absolute;
-        left: 0;
-        height: 50px;
-        width: 76%;
-        border: 0.5px solid $hrrd-primary-color;
-        background: #ffe3d9;
-        top: 50%;
-        transform: translateY(-50%);
-        content: "";
-        z-index: -1;
-      }
-    }
+    // display: inline-block;
   }
 }
 
@@ -1667,7 +1644,7 @@ input:-webkit-autofill {
 }
 
 .hrrd-hero {
-  background: #F0F9FF;
+  background: #f0f9ff;
   padding: 220px 0 134px;
 }
 
@@ -1715,9 +1692,11 @@ input:-webkit-autofill {
 }
 
 .featured-area {
+  padding: 6rem 0;
   .featured-shape {
-    top: -50px;
-    left: 50%;
+    top: 90px;
+    left: 65%;
+    height: 75%;
     transform: translateX(-50%);
   }
 }
@@ -1739,7 +1718,7 @@ input:-webkit-autofill {
   ul {
     li {
       height: 70px;
-      background: #fff3ef;
+      background: #dbe8ff;
       border-radius: 4px;
       margin-bottom: 16px;
       display: flex;
@@ -1759,7 +1738,7 @@ input:-webkit-autofill {
         content: "";
         width: 8px;
         height: 8px;
-        background: #ff7342;
+        background: #165cdd;
         top: 50%;
         left: 31px;
         transform: translateY(-50%);
@@ -2103,6 +2082,7 @@ input:-webkit-autofill {
 }
 
 .apps-box {
+  width: 100%;
   background: #ffffff;
   box-shadow: 5px 30px 56.1276px rgba(55, 55, 55, 0.1098);
   border-radius: 20px;
@@ -2371,13 +2351,16 @@ input:-webkit-autofill {
 20. Hrrd Subscribe area CSS
 =================================================*/
 .hrrd-subscribe-wrap {
-  background: #669ff6;
+  background: #F0F9FF;
   backdrop-filter: blur(100px);
   border-radius: 10px;
   padding: 100px 10px;
   .hrrd-subscribe-title {
+    h1{
+      color: #165CDD;
+    }
     p {
-      color: #fff;
+      color: #165CDD;
       margin: 30px 0 52px;
     }
   }
@@ -5765,6 +5748,56 @@ Agency Menu Css
   }
 }
 
-.header-subtitle{
+.header-subtitle {
   text-align: justify;
+}
+
+.heading-underscore {
+  text-decoration: underline;
+  text-decoration-color: #2873ff;
+}
+
+.detail-action-btn {
+  background: #165cdd;
+  padding: 1rem 2.5rem;
+  border: none;
+  border-radius: 4px;
+  color: white;
+  font-weight: 700;
+}
+
+.news-area {
+  background: #f0f9ff;
+  .news-box {
+    background: white;
+    border-radius: 4px;
+    padding: 1.875rem;
+    .news-category{
+      color: #5A7184;
+      font-weight: 900;
+      font-size: 1rem;
+      margin-bottom: 10px;
+    }
+    .news-heading{
+      color: #183B56;
+      font-weight: 900;
+      font-size: 1.5rem;
+      line-height: 34px;
+      margin-bottom: 1rem;
+    }
+    .news-readmore{
+      button{
+        color: #2873FF;
+        font-size: 1rem;
+        border: none;
+        outline: none;
+        background: none;
+        font-weight: 700;
+      }
+    }
+  }
+}
+
+.box-around-text{
+  border: 1px solid #165CDD;
 }
