--- a/styles/style.css
+++ b/styles/style.css
@@ -332,6 +332,10 @@ input:-webkit-autofill:hover, input:-webkit-autofill:focus {
   color: #3b3b3b;
 }
 
+.crypto-heading {
+  color: #183b56 !important;
+}
+
 @-webkit-keyframes up-dn-mark-1 {
   0% {
     transform: translateY(-5px);
@@ -1426,7 +1430,7 @@ input:-webkit-autofill:hover, input:-webkit-autofill:focus {
   display: inline-block;
   padding: 25px 30px;
   position: absolute;
-  left: -30px;
+  left: 20%;
   top: -10px;
   -webkit-animation: up-dn-cart-time 2s alternate linear infinite;
           animation: up-dn-cart-time 2s alternate linear infinite;
@@ -1484,15 +1488,79 @@ input:-webkit-autofill:hover, input:-webkit-autofill:focus {
   border-radius: 50%;
   margin-right: 7px;
 }
+.hrrd-hero-img-wrap .hrrd-hero-post-2 {
+  background: #ffffff;
+  box-shadow: 0px 14.8745px 34.9551px rgba(0, 0, 0, 0.05);
+  border-radius: 7.13976px;
+  display: inline-block;
+  padding: 25px 30px;
+  position: absolute;
+  right: 10%;
+  top: 30%;
+  -webkit-animation: up-dn-cart-time 2s alternate linear infinite;
+          animation: up-dn-cart-time 2s alternate linear infinite;
+}
+.hrrd-hero-img-wrap .hrrd-hero-post-2 h4 {
+  font-family: "Circular Std medium";
+  font-size: 17.8494px;
+  letter-spacing: 0.178494px;
+  color: #3b3b3b;
+}
+.hrrd-hero-img-wrap .hrrd-hero-post-2 .hrrd-hero-post-shape {
+  position: relative;
+  text-align: center;
+  margin: 24px 0px 24px;
+}
+.hrrd-hero-img-wrap .hrrd-hero-post-2 .hrrd-hero-post-shape i {
+  width: 42px;
+  height: 42px;
+  font-size: 16px;
+  color: #183b56;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: #ffffff;
+  box-shadow: 0px 14.8745px 34.9551px rgba(0, 0, 0, 0.05);
+  border-radius: 50%;
+}
+.hrrd-hero-img-wrap .hrrd-hero-post-2 ul {
+  line-height: 1;
+}
+.hrrd-hero-img-wrap .hrrd-hero-post-2 ul li {
+  display: inline-flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-right: 15px;
+  line-height: 1;
+}
+.hrrd-hero-img-wrap .hrrd-hero-post-2 ul li:last-child {
+  margin-right: 0;
+}
+.hrrd-hero-img-wrap .hrrd-hero-post-2 ul li:last-child span {
+  background: #1565d8;
+}
+.hrrd-hero-img-wrap .hrrd-hero-post-2 ul li span {
+  line-height: 0;
+  font-size: 0;
+  display: inline-block;
+  background: #00b8d9;
+  height: 5.35px;
+  width: 5.35px;
+  border-radius: 50%;
+  margin-right: 7px;
+}
 
 .like-cart.hero-like-cart {
   padding: 24px;
   border-radius: 8.2142px;
   -webkit-animation: up-dn-cart-like 2s alternate linear infinite;
           animation: up-dn-cart-like 2s alternate linear infinite;
-  top: 90px;
-  right: 0px;
-  bottom: unset;
+  bottom: 20%;
+  right: 59%;
   left: auto;
 }
 .like-cart.hero-like-cart .like-cart-box .like-cart-icon i {
@@ -1634,7 +1702,7 @@ input:-webkit-autofill:hover, input:-webkit-autofill:focus {
   background: #ffffff;
   box-shadow: 0px 29.7349px 68.2154px rgba(0, 0, 0, 0.05);
   border-radius: 20.0099px;
-  padding: 40px;
+  padding: 20px;
   display: inline-block;
   position: absolute;
   top: 0;
@@ -1677,7 +1745,7 @@ input:-webkit-autofill:hover, input:-webkit-autofill:focus {
   box-shadow: 0px 26.6471px 61.1317px rgba(0, 0, 0, 0.05);
   border-radius: 17.932px;
   display: inline-block;
-  padding: 53px;
+  padding: 25px;
   position: absolute;
   bottom: 41%;
   left: 0;
@@ -1725,8 +1793,8 @@ input:-webkit-autofill:hover, input:-webkit-autofill:focus {
   padding: 30px;
   display: inline-block;
   position: absolute;
-  bottom: 0;
-  right: 0;
+  bottom: -5%;
+  right: -10%;
   -webkit-animation: up-dn-cart-time 2.5s alternate linear infinite;
           animation: up-dn-cart-time 2.5s alternate linear infinite;
 }
@@ -2227,26 +2295,24 @@ input:-webkit-autofill:hover, input:-webkit-autofill:focus {
 
 .hrrd-testimonial-shape {
   left: 0;
-  top: 30%;
-  -webkit-animation: up-dn 2s alternate linear infinite;
-          animation: up-dn 2s alternate linear infinite;
+  top: 15%;
 }
 
 /*================================================
 20. Hrrd Subscribe area CSS
 =================================================*/
 .hrrd-subscribe-wrap {
-  background: #F0F9FF;
+  background: #f0f9ff;
   -webkit-backdrop-filter: blur(100px);
           backdrop-filter: blur(100px);
   border-radius: 10px;
   padding: 100px 10px;
 }
 .hrrd-subscribe-wrap .hrrd-subscribe-title h1 {
-  color: #165CDD;
+  color: #165cdd;
 }
 .hrrd-subscribe-wrap .hrrd-subscribe-title p {
-  color: #165CDD;
+  color: #165cdd;
   margin: 30px 0 52px;
 }
 .hrrd-subscribe-wrap form {
@@ -5371,20 +5437,20 @@ Agency Menu Css
   padding: 1.875rem;
 }
 .news-area .news-box .news-category {
-  color: #5A7184;
+  color: #5a7184;
   font-weight: 900;
   font-size: 1rem;
   margin-bottom: 10px;
 }
 .news-area .news-box .news-heading {
-  color: #183B56;
+  color: #183b56;
   font-weight: 900;
   font-size: 1.5rem;
   line-height: 34px;
   margin-bottom: 1rem;
 }
 .news-area .news-box .news-readmore button {
-  color: #2873FF;
+  color: #2873ff;
   font-size: 1rem;
   border: none;
   outline: none;
@@ -5393,5 +5459,100 @@ Agency Menu Css
 }
 
 .box-around-text {
-  border: 1px solid #165CDD;
+  border: 1px solid #165cdd;
+}
+
+.risk-warning {
+  margin-bottom: 1rem;
+}
+.risk-warning .risk-warning-headingg {
+  position: relative;
+  display: flex;
+  box-sizing: border-box;
+}
+.risk-warning .risk-warning-headingg h1 {
+  color: #165cdd;
+  font-size: 2rem;
+  font-weight: 800;
+  margin-right: 1rem;
+}
+.risk-warning .risk-warning-content p {
+  margin-bottom: 1rem;
+  font-size: 1rem;
+  color: #64748b;
+  text-align: justify;
+}
+
+.feedback-image {
+  border-radius: 50%;
+  z-index: -1;
+}
+
+.testimonial-img-slide-wrap i {
+  z-index: 2;
+}
+
+.tcsb_nav button:hover {
+  color: #2873ff !important;
+  transition: 0.2s ease-in-out;
+}
+.tcsb_nav .grey-disabled {
+  color: grey !important;
+}
+
+.feedback-customer .customer-description {
+  font-weight: 900;
+  font-size: 2rem;
+  color: #3b3b3b;
+  line-height: 60px;
+  margin-bottom: 1.75rem;
+}
+.feedback-customer .customer-name {
+  font-weight: 400;
+  font-size: 1rem;
+  color: #5a7184;
+}
+.feedback-customer .feedback-avatar {
+  cursor: pointer;
+  border-radius: 50%;
+  margin-right: 1.25rem;
+}
+.feedback-customer .feedback-avatar-border {
+  border: 5px solid #2873ff;
+  transition: 0.2s ease-in-out;
+}
+
+.feedback-behind {
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  right: 0;
+}
+
+.quote-left {
+  position: absolute;
+  top: 88%;
+  left: 22%;
+  transform: translate(-50%, -50%);
+  font-size: 100px;
+  color: #3b3b3b;
+  z-index: 2;
+}
+
+.footer-straight-line {
+  display: flex;
+  flex: 1;
+}
+
+hr {
+  flex-grow: 1;
+  opacity: 1;
+  color: black;
+}
+
+.info-bg {
+  background: url("/assets/images/shape/feasured-hrrd.png");
+  background-repeat: no-repeat;
+  background-position: right 30% center;
+  background-size: 30%;
 }/*# sourceMappingURL=style.css.map */
