--- a/styles/style.scss
+++ b/styles/style.scss
@@ -139,6 +139,7 @@ $circul-std-500: "Circular Std medium";
 /* Circular Std Font End */
 
 a {
+  font-family: $circul-std-400;
   color: unset;
   text-decoration: none;
 
@@ -163,7 +164,7 @@ h4,
 h5,
 h6 {
   margin-bottom: 0;
-  font-family: $fontheader-1;
+  font-family: $circul-std-400;
   color: $ch-header-color;
 }
 
@@ -172,11 +173,18 @@ body {
   font-weight: 400;
   line-height: 1.6;
   color: $ch-text-color;
-  font-family: $fontparagraph-1;
+  font-family: $circul-std-400 !important;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 p {
+  font-family: $circul-std-400;
   margin-bottom: 0;
+}
+
+button {
+  font-family: $circul-std-400 !important;
 }
 
 input:focus,
@@ -189,6 +197,7 @@ ul {
   margin: 0;
   padding: 0;
   list-style: none;
+  font-family: $circul-std-400;
 }
 
 i.bx {
