Contact page added.

--- a/styles/style.css
+++ b/styles/style.css
@@ -4852,6 +4852,7 @@ Agency Menu Css
 }
 
 .cart-wrap .single-cart {
+  background: #f0f9ff;
   margin-bottom: 24px;
   border: 2px solid rgba(102, 159, 246, 0.3);
   box-sizing: border-box;
@@ -5014,7 +5015,7 @@ Agency Menu Css
   margin-bottom: 26px;
 }
 .cart-wrap .single-cart .contact-details .contact-details-info ul li {
-  color: #5a7184;
+  color: black;
   display: flex;
   align-items: center;
   margin-bottom: 8px;
@@ -5030,7 +5031,7 @@ Agency Menu Css
 }
 .cart-wrap .single-cart .contact-details .contact-details-info ul li i {
   font-size: 20px;
-  color: #0241ff;
+  color: black;
   margin-right: 15px;
   transition: color 0.25s ease-in-out;
 }
@@ -5121,13 +5122,6 @@ Agency Menu Css
 }
 .contact-input .form-message.success {
   color: green;
-}
-.contact-input h1 {
-  font-family: "Circular Std black";
-  font-style: normal;
-  font-size: 48px;
-  color: #3b3b3b;
-  margin-bottom: 39px;
 }
 .contact-input textarea,
 .contact-input input {
@@ -5759,4 +5753,44 @@ hr {
   color: #165cdd;
   font-family: "Circular Std bold";
   font-size: 1rem;
+}
+
+.contact-area {
+  padding: 100px 0;
+}
+.contact-area .contact-title h1 {
+  font-family: "Lato", sans-serif;
+  font-weight: 900;
+  font-size: 2.5rem;
+  color: #3b3b3b;
+}
+.contact-area .contact-title .contact-title-underscore {
+  border-bottom: 2px solid #165cdd;
+}
+.contact-area .contact-area-bg {
+  background: #f0f9ff;
+  border-radius: 20px;
+}
+.contact-area .contact-area-label {
+  color: #000000;
+  font-size: 1rem;
+  font-weight: 700;
+}
+
+.contact-accordion {
+  background: #f0f9ff;
+  border: 1px solid #165cdd;
+  border-radius: 20px;
+  padding: 1.75rem 1.5rem;
+}
+
+.chakra-accordion__item {
+  border: none;
+  background: white;
+  margin-bottom: 10px;
+}
+
+.contact-area-input:focus {
+  border: 1px solid #2873ff;
+  transition: 0.2s ease-in;
 }/*# sourceMappingURL=style.css.map */
