--- a/styles/style.scss
+++ b/styles/style.scss
@@ -6213,3 +6213,24 @@ hr {
     transition: 0.2s ease-in;
   }
 }
+
+.news-link-active {
+  font-weight: 700;
+  color: black !important;
+  display: inline-block;
+  position: relative;
+  &::before {
+    transform: translateX(-50%);
+    border-radius: 100%;
+    position: absolute;
+    background: blue;
+    bottom: 5px;
+    height: 8px;
+    content: "";
+    width: 8px;
+    left: 50%;
+  }
+  &:hover {
+    color: black;
+  }
+}
